@@ -1,3 +1,8 @@
+master
+------
+
+* Add /api/oncall endpoint
+
 Version 0.11.9
 --------------
 
